# spotify-track-tonality

./: CMakeLists.txt  Dockerfile  Makefile  README.md  main.cpp  pymain.py  sp_key_mapping.py
include/: curlException.h  requiresFixPaths.h  spotifeye.h
spotify/: credentials.json
src/: authorize.cpp  main.cpp  spotifeye.cpp
